--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-kakao-maps-sdk": "^1.1.9",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
