--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "algoliasearch": "^4.18.0",
     "axios": "^1.4.0",
     "firebase": "^10.0.0",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
