--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.10",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query-devtools": "^4.32.0",
     "algoliasearch": "^4.18.0",
     "axios": "^1.4.0",
     "firebase": "^10.0.0",
